--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -11,6 +11,11 @@
             <input type="text" name="email" value="" placeholder="example@gmail.com">
         </div>
         <div class="form-group">
+            <label for="name" class="text-light">Mobile No</label>
+            <input type="hidden" name="id" value="">
+            <input type="text" name="mobile" value="" placeholder="0123456789" maxlength=10>
+        </div>
+        <div class="form-group">
             <label for="gender" class="text-light">Gender</label>
             <div class="radio inline">
                 <input type="radio" id="radio-2" name="gender" value="Male" >
