--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -3,6 +3,7 @@
     <td><%= i + 1 %></td>
     <td><%= users[i].name %></td>
     <td><%= users[i].email %></td>
+    <td><%= users[i].mobile %></td>
     <td><%= users[i].gender %></td>
     <td><%= users[i].status %></td>
     <td>
