--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
                             <th>ID</th>
                             <th>Name</th>
                             <th>@Email</th>
+                            <th>Mobile No</th>
                             <th>Gender</th>
                             <th>Status</th>
                             <th>Action</th>
