--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -29,6 +29,10 @@
             <label for="Email" class="text-light">Email</label>
             <input type="text" name="email" value="<%= user.email%>" placeholder="example@gmail.com">
         </div>
+         <div class="form-group">
+            <label for="name" class="text-light">Mobile No</label>
+            <input type="text" name="mobile" value="<%= user.mobile %>" placeholder="Mark Stoenis">
+        </div>
         <div class="form-group">
             <label for="gender" class="text-light">Gender</label>
             <div class="radio inline">
